add tanstack query

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.59.13",
     "axios": "^1.7.7",
     "vue": "^3.5.10"
   },
